syntax = "proto3";
package modular.retriever.types;

import "gogoproto/gogo.proto";
import "greenfield/storage/types.proto";
import "service/types/storage_provider.proto";
import "base/types/gfsperrors/error.proto";

option go_package = "github.com/bnb-chain/greenfield-storage-provider/modular/retriever/types";

// Bucket is the structure for user bucket
message Bucket {
  // bucket_info defines the information of the bucket.
  greenfield.storage.BucketInfo bucket_info = 1;
  // removed defines the bucket is deleted or not
  bool removed = 2;
  // delete_at defines the block number when the bucket deleted.
  int64 delete_at = 3;
  // delete_reason defines the deleted reason of bucket
  string delete_reason = 4;
  // operator defines the operator address of bucket
  string operator = 5;
  // create_tx_hash defines the creation transaction hash of object
  string create_tx_hash = 6;
  // update_tx_hash defines the update transaction hash of object
  string update_tx_hash = 7;
  // update_at defines the block number when the object updated
  int64 update_at = 8;
  // update_time defines the block number when the object updated
  int64 update_time = 9;
}

// Object is the structure for user object
message Object {
  // object_info defines the information of the object.
  greenfield.storage.ObjectInfo object_info = 1;
  // locked_balance defines locked balance of object
  string locked_balance = 2;
  // removed defines the object is deleted or not
  bool removed = 3;
  // update_at defines the block number when the object updated
  int64 update_at = 4;
  // delete_at defines the block number when the object deleted
  int64 delete_at = 5;
  // delete_reason defines the deleted reason of object
  string delete_reason = 6;
  // operator defines the operator address of object
  string operator = 7;
  // create_tx_hash defines the creation transaction hash of object
  string create_tx_hash = 8;
  // update_tx_hash defines the update transaction hash of object
  string update_tx_hash = 9;
  // seal_tx_hash defines the sealed transaction hash of object
  string seal_tx_hash = 10;
}

// GfSpGetUserBucketsRequest is request type for the GfSpGetUserBuckets RPC method.
message GfSpGetUserBucketsRequest {
  // account_id is the account address of user
  string account_id = 1;
}

// GfSpGetUserBucketsResponse is response type for the GfSpGetUserBuckets RPC method.
message GfSpGetUserBucketsResponse {
  // buckets defines the list of bucket
  repeated Bucket buckets = 1;
}

// GetBucketReadQuotaRequest is request type for the GetBucketReadQuota RPC method.
message GfSpGetBucketReadQuotaRequest {
  // bucket info from the greenfield chain
  greenfield.storage.BucketInfo bucket_info = 1;
  // year_month is the query bucket quota's month, like "2023-03"
  string year_month = 2;
}

// GetBucketReadQuotaResponse is response type for the GetBucketReadQuota RPC method.
message GfSpGetBucketReadQuotaResponse {
  base.types.gfsperrors.GfSpError err = 1;
  // charged_quota_size is the greenfield chain bucket info's read quota size
  uint64 charged_quota_size = 2;
  // sp_free_quota_size is the sp default free quota
  uint64 sp_free_quota_size = 3;
  // consumed_size is currently consumed size
  uint64 consumed_size = 4;
}

// ListBucketReadRecordRequest is request type for the ListBucketReadRecord RPC method.
message GfSpListBucketReadRecordRequest {
  // bucket info from the greenfield chain
  greenfield.storage.BucketInfo bucket_info = 1;
  // start_timestamp_us is the list request's left side, like [start_timestamp_us, end_timestamp_us)
  int64 start_timestamp_us = 2;
  // start_timestamp_us is the list request's right side, like [start_timestamp_us, end_timestamp_us)
  int64 end_timestamp_us = 3;
  // max_record_num is used to limit max list records
  int64 max_record_num =4;
}

// ReadRecord is used to record the read request.
message ReadRecord {
  // object_name is the read object name
  string object_name = 1;
  // object_id is the read object id
  uint64 object_id = 2;
  // account_address is the read account address
  string account_address = 3;
  // timestamp_us is the read time stamp
  int64 timestamp_us = 4;
  // read_size is the read object size
  uint64 read_size = 5;
}

// ListBucketReadRecordResponse is response type for the ListBucketReadRecord RPC method.
message GfSpListBucketReadRecordResponse {
  base.types.gfsperrors.GfSpError err = 1;
  // read_records are the read record list
  repeated ReadRecord read_records = 2[(gogoproto.nullable) = true];
  // next_start_timestamp_us is used to fetch next batch, When the list is completed, it is 0.
  int64 next_start_timestamp_us = 3;
}

// QueryUploadProgressRequest is request type for the QueryObjectPutState RPC method.
message GfSpQueryUploadProgressRequest {
  // object_id defines the unique id of the object.
  uint64 object_id = 1;
}

// QueryUploadProgressResponse is response type for the QueryObjectPutState RPC method.
message GfSpQueryUploadProgressResponse {
  base.types.gfsperrors.GfSpError err = 1;
  // state defines the state of put object.
  service.types.JobState state = 2;
}

service GfSpRetrieverService {
  rpc GfSpGetUserBuckets(GfSpGetUserBucketsRequest) returns (GfSpGetUserBucketsResponse) {};
  rpc GfSpGetBucketReadQuota(GfSpGetBucketReadQuotaRequest) returns (GfSpGetBucketReadQuotaResponse) {};
  rpc GfSpListBucketReadRecord(GfSpListBucketReadRecordRequest) returns (GfSpListBucketReadRecordResponse) {};
  rpc GfSpQueryUploadProgress(GfSpQueryUploadProgressRequest) returns (GfSpQueryUploadProgressResponse) {};
}